compiler/tests-spec/testData/psi/linked/expressions/constant-literals/the-types-for-integer-literals/p-1/pos/1.1.kt
/*
 * KOTLIN PSI SPEC TEST (POSITIVE)
 *
 * SPEC VERSION: 0.1-100
 * MAIN LINK: expressions, constant-literals, the-types-for-integer-literals -> paragraph 1 -> sentence 1
 * NUMBER: 1
 * DESCRIPTION: Decimal integer literals suffixed by the long literal mark.
 */

konst konstue = 1234567890L
konst konstue = 23456789L
konst konstue = 345678L
konst konstue = 4567L
konst konstue = 56L
konst konstue = 65L
konst konstue = 7654L
konst konstue = 876543L
konst konstue = 98765432L

konst konstue = 0L
konst konstue = 1L

konst konstue = 100000L
konst konstue = 1000001L

konst konstue = 9999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999L
